--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,7 @@ android.useAndroidX=true
 #MPP
 kotlin.mpp.androidSourceSetLayoutVersion=2
 kotlin.mpp.enableCInteropCommonization=true
+kotlin.native.cacheKind=none
 
 #Development
 development=true
